PR/49270: Hauke Fath: Samsung NC10 Marvell Yukon ethernet not supported